hphp/hack/test/typecheck/truthiness_test_18.php
<?hh // strict

function test(Pair<int, int> $x): void {
  if ($x) {
  }
}
